tdf#95699: allow copy FORMCHECKBOX and FORMDROPDOWN ...

... when they are selected alone (no adjacent text selected).
Unit test included.

Change-Id: Ia278ae2ea86a3e6d83e1a628880f770f1eb11cd7